--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+
+	<link rel="stylesheet" href="index.css">
 </head>
 <body>
 
-<script>
-	var name = prompt('¿Cuál es tu nombre?');
-	alert('Bienvenido al lado oscuro ' + name);
-</script>
+	<div class="contenedor">
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis vitae, nam, provident aliquid expedita officia!</p>
+	</div>
 	
 </body>
 </html>
