--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 
-	<link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" href="css/index.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Sans" rel="stylesheet"> 
 </head>
-<body>
-
-	<div class="contenedor">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis vitae, nam, provident aliquid expedita officia!</p>
-	</div>
-	
+<body class="fondo">
+	<section class="one">
+		<div class="mask red">
+			Addstronomy
+		</div>
+	</section>
+	<section class="two"></section>
+	<section class="other">
+		<div class="mask blue">
+			Appstronomy
+		</div>
+	</section>
 </body>
 </html>
